Update dependencies, add tests, new code